--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,19 @@
+# 开发环境配置
 server:
-    port: 8090 #服务端口
+  # 服务端口
+  port: 8090
 
 spring:
-    application:
-        name: payment-demo # 应用名称
-    jackson: #json时间格式
-        date-format: yyyy-MM-dd HH:mm:ss
-        time-zone: GMT+8
+  application:
+    # 应用名称
+    name: payment-demo
+
+  jackson: # json时间格式
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
+  # mysql数据库连接
+  datasource:
+    url: jdbc:mysql://localhost:3306/payment_demo?serverTimezone=GMT%2B8&characterEncoding=utf-8
+    username: root
+    password: root
+    driver-class-name: com.mysql.cj.jdbc.Driver
