--- a/src/main/resources/wxpay.properties
+++ b/src/main/resources/wxpay.properties
@@ -12,4 +12,4 @@ wxpay.appid=wx74862e0dfcf69954
 # \u5FAE\u4FE1\u670D\u52A1\u5668\u5730\u5740
 wxpay.domain=https://api.mch.weixin.qq.com
 # \u63A5\u6536\u7ED3\u679C\u901A\u77E5\u5730\u5740(\u5185\u7F51\u7A7F\u900F)
-wxpay.notify-domain=https://7d92-115-171-63-135.ngrok.io
+wxpay.notify-domain=https://wxpay.loca.lt
