--- a/src/main/resources/wxpay.properties
+++ b/src/main/resources/wxpay.properties
@@ -13,3 +13,6 @@ wxpay.appid=wx74862e0dfcf69954
 wxpay.domain=https://api.mch.weixin.qq.com
 # \u63A5\u6536\u7ED3\u679C\u901A\u77E5\u5730\u5740(\u5185\u7F51\u7A7F\u900F)
 wxpay.notify-domain=https://wxpay.loca.lt
+
+# APIv2\u5BC6\u94A5
+wxpay.partnerKey: T6m9iK73b0kn9g5v426MKfHQH7X8rKwb
