--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
             <artifactId>wxpay-sdk</artifactId>
             <version>0.0.3</version>
         </dependency>
+        <!--支付宝支付SDK-->
+        <dependency>
+            <groupId>com.alipay.sdk</groupId>
+            <artifactId>alipay-sdk-java</artifactId>
+            <version>4.33.26.ALL</version>
+        </dependency>
 
     </dependencies>
 
